Added Json changed multiple stuff

--- a/bookings.css
+++ b/bookings.css
@@ -1,4 +1,48 @@
+/* gallery */
+.gallery2{
+  display: flex;
+  flex-direction: column;
+  justify-items: start;
+  align-items: start;
+
+  gap:18px;
+  padding:28px;
+ position: relative;
+  overflow: hidden;
+}
+.gallery2 figure{
+  margin:0;
+  background: linear-gradient(180deg, rgba(101, 98, 112, 0.068), rgba(77, 66, 129, 0.006));
+  border-radius:10px;
+  overflow:hidden;
+  cursor:pointer;
+  width: 240px;
+  
+  transition: transform .15s ease, box-shadow .15s ease;
+}
+.gallery2 figure:hover{ 
+    transform: translateY(-6px); 
+    box-shadow: 0 12px 32px rgba(0, 0, 0, 0.6);
+}
+.gallery2 img{
+    display:block;
+    width:100%;
+    height:350px;
+    object-fit:cover;
+}
+.gallery2 figcaption{
+    
+  padding:10px 12px;
+  font-weight:600;
+  color:var(--white);         
+  background: var(--surface);
+  font-size:14px;
+  margin-top:auto;
+
+}
+
 /* steps */
+
 main{
     display: flex;
     flex:1;
