--- a/css/trivia.css
+++ b/css/trivia.css
@@ -17,8 +17,8 @@
   font-size: 3em;
   margin-bottom: 10px;
   background: var(--accent-gradient);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  background-color: transparent;
+  color: #7a1fd1;
   background-clip: text;
 }
 
