--- a/css/bookings.css
+++ b/css/bookings.css
@@ -316,3 +316,8 @@ main{
     text-align: center;
     letter-spacing: 0.5px;
 }
+#confirmbtn:disabled {
+  background-color: #888;    
+  cursor: not-allowed;
+  opacity: 0.7;
+}
