select works again, styling a little

--- a/css/bookings.css
+++ b/css/bookings.css
@@ -139,11 +139,15 @@ main{
     
 }
 .movie-card{
-    width:180px;
-    flex: 0 0 180px;
+    width:250px;
+    flex: 0 0 250px;
+    height: 428px;
+}
+.booking-rating-overlay {
+
+    top: calc(428px - 113px);/*overlay has same osas men styles just the position gher */
 }
 
-/* tablets */
  @media (max-width: 1000px) {
   main {
     flex-direction: column;
@@ -280,7 +284,7 @@ main{
     width: 100% !important;
     padding: 12px 14px !important;
     background: #1a1a24 !important;
-    color: #ffffff !important;
+    color: white !important;
     border: 2px solid #7a5cff !important;
     border-radius: 10px !important;
     cursor: pointer !important;
